<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nano Sense</string>
    <string name="title_activity_nano_sense">NanoSenseActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Begin NanoSenseActivity -->

    <!-- Menu Item Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <!-- Device Progress Dialog labels -->
    <string name="device_progress_dialog_spi">Initializing SPI…</string>
    <string name="device_progress_dialog_mux">Initializing Multiplexer</string>
    <string name="device_progress_dialog_adc">Initializing ADCs</string>
    <string name="device_progress_dialog_uart">Initializing UART</string>
    <string name="device_progress_dialog_rheostat">Initializing Rheostat</string>
    <string name="device_progress_dialog_default">Initializing…</string>
    <!-- Sensor Progress Dialog labels -->
    <string name="sensor_progress_dialog_title">Initializing Sensors…</string>
    <string name="sensor_progress_dialog_message">Sensor\u0020</string>
    <string name="device_progress_dialog_title">Initializing Device…</string>

    <!-- End NanoSenseActivity -->

    <!-- Begin Options Activity -->

    <string name="title_activity_options">OptionsActivity</string>
    <!-- Labels for device selection radio buttons. -->
    <string name="device_ioio_standard">Standard</string>
    <string name="device_ioio_pump">Pump</string>
    <string name="device_ioio_rover">Rover</string>
    <!-- Label for device selection section. -->
    <string name="device_selection_label">Select Device Type:</string>
    <!-- Label for polling rate section. -->
    <string name="polling_rate_label">Polling Rate (ms):</string>
    <!-- Hint for polling rate EditText. -->
    <string name="polling_rate_hint">e.g. 100</string>
    <!-- Hints for server selection EditTexts. -->
    <string name="server_port_hint">e.g. 8080</string>
    <string name="server_ip_hint">e.g. 255.255.255.255</string>
    <!-- Label for server selection sections. -->
    <string name="server_ip_label">Server IP:</string>
    <string name="server_port_label">Server Port:</string>
    <!-- Label for pump baseline duration section. -->
    <string name="baseline_duration_label">Baseline Duration (s):</string>
    <!-- Hint for pump baseline duration EditText. -->
    <string name="baseline_duration_hint">e.g. 600</string>
    <!-- Label for rover device control -->
    <string name="rover_control_options_label">Rover Control Options:</string>
    <!-- Label for calibrating (zeroing) the accelerometer -->
    <string name="button_calibrate_accelerometer">Calibrate Accelerometer</string>
    <!-- Label for enabling/disabling accelerometer control button -->
    <string name="button_enable_accelerometer">Enable Accelerometer</string>
    <string name="button_disable_accelerometer">Disable Accelerometer</string>
    <string name="button_options_done">Done</string>
    <!-- Error messages for invalid options in settings -->
    <string name="error_polling_rate">Error - Invalid Polling Rate\nDefaulting to\u0020</string>
    <string name="error_server_ip">Error - Invalid server IP\nDefaulting to\u0020</string>
    <string name="error_server_port">Error - Invalid server port\nDefaulting to\u0020</string>
    <!-- String for toast messaged shown when back pressed in options activity -->
    <string name="options_cancelled">Cancelled - Options not set</string>
    <string name="action_set_visible_pins">Set Visible Pins</string>
    <string name="confirm_calibrate_accel">Accelerometer Calibrated</string>
    <string name="error_baseline_duration">Error - Invalid baseline duration\nDefaulting to\u0020</string>
    <string name="toggle_button_accelerometer_on">Accelerometer On</string>
    <string name="toggle_button_accelerometer_off">Accelerometer Off</string>

    <!-- End Options Activity -->

    <!-- Begin GraphFragment -->
    <string name="graph_view_title_default">Nano Sensors</string>
    <string name="graph_view_x_label_default">Time (min)</string>
    <string name="graph_view_y_label_default">Resistance (k\u03A9)</string>
    <string name="graph_view_title_nano_sensor">Nano Sensors</string>
    <string name="graph_view_x_label_nano_sensor">Time (min)</string>
    <string name="graph_view_y_label_nano_sensor">Resistance (k\u03A9)</string>
    <string name="graph_view_title_nano_sensor_delta">Nano Sensors Delta</string>
    <string name="graph_view_x_label_nano_sensor_delta">\u0394R/R0 (%)</string>
    <string name="graph_view_y_label_nano_sensor_delta">Sensor Channel</string>
    <string name="graph_view_title_temperature">Temperature</string>
    <string name="graph_view_x_label_temperature">Time (min)</string>
    <string name="graph_view_y_label_temperature">Temperature (\u00B0C)</string>
    <string name="graph_view_title_humidity">Relative Humidity</string>
    <string name="graph_view_x_label_humidity">Time (min)</string>
    <string name="graph_view_y_label_humidity">Relative Humidity (%)</string>
    <string name="show_pins_dialog_title">Visible Channels</string>
    <string name="button_label_show">Show</string>
    <!-- End GraphFragment -->
</resources>
