<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".NanoSenseActivity"
    tools:ignore="MergeRootFrame">

    <view
        class="edu.ucr.nanosense.GraphView"
        android:id="@+id/graph_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/graph_view_padding"/>

    <TextView
        style="@style/GraphViewTitle"
        android:id="@+id/graph_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graph_view_title_default"/>

    <TextView
        style="@style/GraphViewXLabel"
        android:id="@+id/graph_view_x_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graph_view_x_label_default"/>

    <!-- Needs to be programatically moved to line up since text length can vary -->
    <TextView
        style="@style/GraphViewYLabel"
        android:id="@+id/graph_view_y_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_view_y_label_default"/>

</FrameLayout>
